--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "mongoose": "^3.8.14"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
     "chai-http": "^0.4.0",
+    "debowerify": "^0.8.1",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "matchdep": "*"
+    "grunt-browserify": "^2.1.4",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
