--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "debowerify": "^0.8.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
+    "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "*"
   }
 }
