--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha": "^0.4.11",
     "grunt-nodemon": "*",
     "handlebars": "^2.0.0-alpha.4",
     "hbsfy": "^2.0.0",
     "jquery": "^2.1.1",
+    "mocha": "^1.21.4",
     "sinon": "^1.10.3"
   }
 }
